--- a/css/studenenToevoegen/studenenToevoegen.css
+++ b/css/studenenToevoegen/studenenToevoegen.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,300&display=swap");
 @font-face {
   font-family: face;
   src: url(../);
@@ -9,7 +10,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 html,
@@ -19,6 +20,7 @@ body {
   background-color: #f5f7fa;
   display: flex;
 }
+
 ::-moz-selection {
   background: #85d109;
 }
@@ -58,23 +60,22 @@ body {
   border-bottom: 2px solid lightgray;
   display: flex;
 }
-
-a {
-  color: black;
-}
-
 #tab-nav #tabs p {
   align-self: center;
   font-size: 18px;
   margin-right: 35px;
   font-weight: lighter;
 }
-#tab-nav #tabs #current-page {
+#tab-nav #tabs p a {
+  color: #000000;
+  font-weight: lighter;
+}
+#tab-nav #tabs #current-page a {
   color: #85d109;
   font-weight: bold;
   position: relative;
 }
-#tab-nav #tabs #current-page::after {
+#tab-nav #tabs #current-page a::after {
   content: "";
   position: absolute;
   top: 43px;
@@ -192,9 +193,9 @@ a {
 }
 #content #importeren #box-importeren #voorbeeld-bestand {
   font-weight: bold;
-  color: black;
   text-decoration: underline;
   margin-bottom: 20px;
+  color: black;
 }
 #content #importeren #box-importeren #drag-drop {
   align-self: center;
