--- a/css/studenenToevoegen/studenenToevoegen.scss
+++ b/css/studenenToevoegen/studenenToevoegen.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,300&display=swap");
+
 @font-face {
     font-family: face;
     src: url(../);
@@ -26,7 +28,7 @@ $color-letters: #000000;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: sans-serif;
+    font-family: "Roboto", sans-serif;
     // outline: red 0.5px solid;
 }
 
@@ -87,22 +89,29 @@ body {
             font-size: 18px;
             margin-right: 35px;
             font-weight: lighter;
+
+            a {
+                color: $color-letters;
+                font-weight: lighter;
+            }
         }
 
         #current-page {
-            color: $color-GLRgroen;
-            font-weight: bold;
-            position: relative;
+            a {
+                color: $color-GLRgroen;
+                font-weight: bold;
+                position: relative;
 
-            &::after {
-                content: "";
-                position: absolute;
-                top: 43px;
-                left: 0;
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: 43px;
+                    left: 0;
 
-                width: 100%;
-                height: auto;
-                border-bottom: 3px solid $color-GLRgroen;
+                    width: 100%;
+                    height: auto;
+                    border-bottom: 3px solid $color-GLRgroen;
+                }
             }
         }
     }
@@ -244,6 +253,7 @@ body {
                 font-weight: bold;
                 text-decoration: underline;
                 margin-bottom: 20px;
+                color: black;
             }
 
             #drag-drop {
@@ -316,7 +326,6 @@ body {
                     position: absolute;
                     top: 25%;
                 }
-
             }
 
             #scheidlijn {
