--- a/css/studentenLijst/studentenLijst.css
+++ b/css/studentenLijst/studentenLijst.css
@@ -18,25 +18,21 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: #F5F7FA;
+  background-color: #f5f7fa;
 }
 
 ::-moz-selection {
-  background: #85D109;
+  background: #85d109;
 }
 
 ::selection {
-  background: #85D109;
+  background: #85d109;
 }
 
 #main-content {
   display: flex;
   flex-grow: 2;
   flex-direction: column;
-}
-
-a {
-  color: black;
 }
 
 #tab-nav {
@@ -67,19 +63,23 @@ a {
   margin-right: 35px;
   font-weight: lighter;
 }
-#tab-nav #tabs #current-page {
-  color: #85D109;
+#tab-nav #tabs p a {
+  color: #000000;
+  font-weight: lighter;
+}
+#tab-nav #tabs #current-page a {
+  color: #85d109;
   font-weight: bold;
   position: relative;
 }
-#tab-nav #tabs #current-page::after {
+#tab-nav #tabs #current-page a::after {
   content: "";
   position: absolute;
   top: 43px;
   left: 0;
   width: 100%;
   height: auto;
-  border-bottom: 3px solid #85D109;
+  border-bottom: 3px solid #85d109;
 }
 
 #zoeken-en-filter {
@@ -118,7 +118,7 @@ a {
   border-radius: 5px;
   left: 40px;
   width: 120px;
-  background-color: #85D109;
+  background-color: #85d109;
 }
 
 .responsive-table {
@@ -181,7 +181,7 @@ a {
     padding: 10px 0;
   }
   .responsive-table .col:before {
-    color: #6C7A89;
+    color: #6c7a89;
     padding-right: 10px;
     content: attr(data-label);
     flex-basis: 50%;
