--- a/css/studentenLijst/studentenLijst.scss
+++ b/css/studentenLijst/studentenLijst.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,300&display=swap");
 
 @font-face {
     font-family: face;
@@ -14,9 +14,9 @@ $font-size-text: 16px;
 
 // colors
 
-$color-background: #F5F7FA;
+$color-background: #f5f7fa;
 $color-white: #ffffff;
-$color-GLRgroen: #85D109;
+$color-GLRgroen: #85d109;
 $color-dropshadow: #98989825;
 $color-letters: #000000;
 
@@ -28,7 +28,7 @@ $color-letters: #000000;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 600;
 }
 
@@ -40,7 +40,7 @@ body {
     background-color: $color-background;
 }
 
-::selection{
+::selection {
     background: $color-GLRgroen;
 }
 
@@ -52,9 +52,7 @@ body {
 }
 
 // ******************************************************************** TAB NAV
-a{
-    color: black;
-}
+
 #tab-nav {
     width: 100%;
     height: 140px;
@@ -86,22 +84,29 @@ a{
             font-size: 18px;
             margin-right: 35px;
             font-weight: lighter;
+
+            a {
+                color: $color-letters;
+                font-weight: lighter;
+            }
         }
 
         #current-page {
-            color: $color-GLRgroen;
-            font-weight: bold;
-            position: relative;
+            a {
+                color: $color-GLRgroen;
+                font-weight: bold;
+                position: relative;
 
-            &::after {
-                content: "";
-                position: absolute;
-                top: 43px;
-                left: 0;
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: 43px;
+                    left: 0;
 
-                width: 100%;
-                height: auto;
-                border-bottom: 3px solid $color-GLRgroen;
+                    width: 100%;
+                    height: auto;
+                    border-bottom: 3px solid $color-GLRgroen;
+                }
             }
         }
     }
@@ -133,7 +138,6 @@ a{
     left: 30px;
     // transform: translate(0, -50%);
     box-shadow: 0px 0px 10px $color-dropshadow;
-
 }
 
 #filter {
@@ -149,7 +153,6 @@ a{
     width: 120px;
     background-color: $color-GLRgroen;
 }
-
 
 // ******************************************************************** STUDENTENLIJST TABLE
 .responsive-table {
@@ -212,16 +215,15 @@ a{
             display: none;
         }
 
-        .table-row {}
+        .table-row {
+        }
 
         li {
             display: block;
         }
 
         .col {
-
             flex-basis: 100%;
-
         }
 
         .col {
@@ -229,7 +231,7 @@ a{
             padding: 10px 0;
 
             &:before {
-                color: #6C7A89;
+                color: #6c7a89;
                 padding-right: 10px;
                 content: attr(data-label);
                 flex-basis: 50%;
