--- a/css/login/login.css
+++ b/css/login/login.css
@@ -91,11 +91,15 @@ body {
   width: 50%;
   height: 40%;
   padding-top: 20px;
+}
+#login-box #login-box-right #input-fields form {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
-#login-box #login-box-right #input-fields #username {
+#login-box #login-box-right #input-fields form #username {
   width: 100%;
   height: 40px;
   text-align: center;
@@ -105,22 +109,28 @@ body {
   border: none;
   border-bottom: black solid 3px;
 }
-#login-box #login-box-right #input-fields #username::-moz-placeholder {
+#login-box #login-box-right #input-fields form #username::-moz-placeholder {
   text-align: center;
   color: black;
   font-size: 20px;
   font-weight: bold;
 }
-#login-box #login-box-right #input-fields #username::placeholder {
+#login-box #login-box-right #input-fields form #username:-ms-input-placeholder {
   text-align: center;
   color: black;
   font-size: 20px;
   font-weight: bold;
 }
-#login-box #login-box-right #input-fields #username:focus-visible {
+#login-box #login-box-right #input-fields form #username::placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields form #username:focus-visible {
   outline: none;
 }
-#login-box #login-box-right #input-fields #password {
+#login-box #login-box-right #input-fields form #password {
   width: 100%;
   height: 40px;
   text-align: center;
@@ -131,175 +141,38 @@ body {
   border: none;
   border-bottom: black solid 3px;
 }
-#login-box #login-box-right #input-fields #password::-moz-placeholder {
+#login-box #login-box-right #input-fields form #password::-moz-placeholder {
   text-align: center;
   color: black;
   font-size: 20px;
   font-weight: bold;
 }
-#login-box #login-box-right #input-fields #password::placeholder {
+#login-box #login-box-right #input-fields form #password:-ms-input-placeholder {
   text-align: center;
   color: black;
   font-size: 20px;
   font-weight: bold;
 }
-#login-box #login-box-right #input-fields #password:focus-visible {
+#login-box #login-box-right #input-fields form #password::placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields form #password:focus-visible {
   outline: none;
 }
-#login-box #login-box-right #input-fields #login-button {
+#login-box #login-box-right #input-fields form #login-button {
   background-color: #85d109;
   border: none;
   border-radius: 5px;
-  height: 40px;
+  height: 60px;
   margin-top: 5%;
   color: white;
   font-size: 20px;
   font-weight: bold;
 }
-#login-box #login-box-right #input-fields #login-button:hover {
+#login-box #login-box-right #input-fields form #login-button:hover {
   transform: scale(1.05);
   transition: 0.1s;
-}
-
-.login {
-  width: 400px;
-  background-color: #ffffff;
-  box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-  margin: 100px auto;
-}
-.login h1 {
-  text-align: center;
-  color: #5b6574;
-  font-size: 24px;
-  padding: 20px 0 20px 0;
-  border-bottom: 1px solid #dee0e4;
-}
-.login form {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-top: 20px;
-}
-.login form label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  background-color: #3274d6;
-  color: #ffffff;
-}
-.login form input[type=password] {
-  width: 310px;
-  height: 50px;
-  border: 1px solid #dee0e4;
-  margin-bottom: 20px;
-  padding: 0 15px;
-}
-.login form input[type=text] {
-  width: 310px;
-  height: 50px;
-  border: 1px solid #dee0e4;
-  margin-bottom: 20px;
-  padding: 0 15px;
-}
-.login form input[type=submit] {
-  width: 100%;
-  padding: 15px;
-  margin-top: 20px;
-  background-color: #3274d6;
-  border: 0;
-  cursor: pointer;
-  font-weight: bold;
-  color: #ffffff;
-  transition: background-color 0.2s;
-}
-.login form input[type=submit]:hover {
-  background-color: #2868c7;
-  transition: background-color 0.2s;
-}
-
-.navtop {
-  background-color: #2f3947;
-  height: 60px;
-  width: 100%;
-  border: 0;
-}
-.navtop div {
-  display: flex;
-  margin: 0 auto;
-  width: 1000px;
-  height: 100%;
-}
-.navtop div h1 {
-  display: inline-flex;
-  align-items: center;
-  flex: 1;
-  font-size: 24px;
-  padding: 0;
-  margin: 0;
-  color: #eaebed;
-  font-weight: normal;
-}
-.navtop div a {
-  display: inline-flex;
-  align-items: center;
-  padding: 0 20px;
-  text-decoration: none;
-  color: #c1c4c8;
-  font-weight: bold;
-}
-.navtop div a i {
-  padding: 2px 8px 0 0;
-}
-.navtop div a:hover {
-  color: #eaebed;
-}
-
-body.loggedin {
-  background-color: #f3f4f7;
-}
-
-.content {
-  width: 1000px;
-  margin: 0 auto;
-}
-.content h2 {
-  margin: 0;
-  padding: 25px 0;
-  font-size: 22px;
-  border-bottom: 1px solid #e0e0e3;
-  color: #4a536e;
-}
-.content p {
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-  margin: 25px 0;
-  padding: 25px;
-  background-color: #fff;
-}
-.content p table td {
-  padding: 5px;
-}
-.content p table td:first-child {
-  font-weight: bold;
-  color: #4a536e;
-  padding-right: 15px;
-}
-.content div {
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-  margin: 25px 0;
-  padding: 25px;
-  background-color: #fff;
-}
-.content div table td {
-  padding: 5px;
-}
-.content div table td:first-child {
-  font-weight: bold;
-  color: #4a536e;
-  padding-right: 15px;
-}
-.content div p {
-  padding: 5px;
-  margin: 0 0 10px 0;
 }/*# sourceMappingURL=login.css.map */
